--- a/apps.yaml
+++ b/apps.yaml
@@ -1,8 +1,8 @@
-
-Namespace:    argocd
-Labels:       <none>                                                                                                                                                                                                                                                                                                                                                                                                                                       │
-API Version:  argoproj.io/v1alpha1
-Kind:         Application
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: simpleapp
+  namespace: argocd
 source:
   repoURL: 'https://github.com/chicaragua/ITA.git'
   path: 14.K8s.Jenkins/
