--- a/apps.yaml
+++ b/apps.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: simpleapp
+  name: app
   namespace: argocd
 source:
   repoURL: 'https://github.com/chicaragua/ITA.git'
