--- a/apps.yaml
+++ b/apps.yaml
@@ -3,13 +3,14 @@ kind: Application
 metadata:
   name: app
   namespace: argocd
-source:
-  repoURL: 'https://github.com/chicaragua/ITA.git'
-  path: 14.K8s.Jenkins/
-  targetRevision: master
-destination:
-  server: 'https://kubernetes.default.svc'
-  namespace: ci-cd
-syncPolicy:
-  automated:
-    prune: true
+specs:
+  source:
+    repoURL: 'https://github.com/chicaragua/ITA.git'
+    path: 14.K8s.Jenkins/
+    targetRevision: master
+  destination:
+    server: 'https://kubernetes.default.svc'
+    namespace: ci-cd
+  syncPolicy:
+    automated:
+      prune: true
