--- a/apps.yaml
+++ b/apps.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: apps
-  namespace: argocd
+  namespace: argo_app
 specs:
   destination:
     server: https://kubernetes.default.svc
